[gd_scene load_steps=8 format=3 uid="uid://cqsrar8kekt06"]

[ext_resource type="Script" uid="uid://k276ebntn27u" path="res://PulangSandata/Army/UI/ArmyDeployment.gd" id="1_svhf0"]
[ext_resource type="Script" uid="uid://bdtwc3ob3dlup" path="res://PulangSandata/Army/UI/ArmyUnitsHbox.gd" id="2_fmkh5"]
[ext_resource type="Script" uid="uid://du3fhqurjkm6p" path="res://PulangSandata/Army/UI/GarrisonUnitsHBox.gd" id="2_g3ris"]
[ext_resource type="PackedScene" uid="uid://1cft2wqa5r2g" path="res://PulangSandata/WorldMap/UI/InfoTipPanel.tscn" id="4_vjq7h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjq7h"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.786194, 0.820727, 0.991833, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi7n1"]
bg_color = Color(0.941176, 0.933333, 0.419608, 0)
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.941176, 0.933333, 0.419608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yaiob"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="ArmyDeployment" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_svhf0")

[node name="ArmyDeploymentBg" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
color = Color(0.194349, 0.194349, 0.194349, 1)

[node name="GarrisonBg" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 70.0
offset_right = 950.0
offset_bottom = 190.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vjq7h")

[node name="ArmyBg" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 260.0
offset_right = 950.0
offset_bottom = 380.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vjq7h")

[node name="CommanderBg" type="Panel" parent="."]
custom_minimum_size = Vector2(140, 115)
layout_mode = 0
offset_left = 10.0
offset_top = 260.0
offset_right = 150.0
offset_bottom = 375.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fi7n1")

[node name="CommanderLabel" type="Label" parent="CommanderBg"]
layout_mode = 0
offset_right = 140.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.941176, 0.933333, 0.419608, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yaiob")
text = "Army
Commander
Unit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackCloseButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 950.0
offset_bottom = 60.0

[node name="Back" type="Button" parent="BackCloseButtons"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "üîô"

[node name="PanelName" type="Label" parent="BackCloseButtons"]
layout_mode = 2
text = "Command Army Deployment
Garrisoned Units:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Button" parent="BackCloseButtons"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 30
text = "[‚ùå]"

[node name="GarrisonUnitsVbox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 70.0
offset_right = 950.0
offset_bottom = 190.0

[node name="ScrollContainer" type="ScrollContainer" parent="GarrisonUnitsVbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="GarrisonUnitsHBox" type="HBoxContainer" parent="GarrisonUnitsVbox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("2_g3ris")

[node name="TransferUnitsButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 200.0
offset_right = 960.0
offset_bottom = 250.0
alignment = 1

[node name="ArmyToGarrison" type="Button" parent="TransferUnitsButtons"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
text = "‚¨ÜÔ∏è"

[node name="TransferLabel" type="Label" parent="TransferUnitsButtons"]
layout_mode = 2
text = "Drag Drop to Transfer
Army Units:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GarrisonToArmy" type="Button" parent="TransferUnitsButtons"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
text = "‚¨áÔ∏è"

[node name="ArmyUnitsVbox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 260.0
offset_right = 950.0
offset_bottom = 380.0

[node name="ScrollContainer" type="ScrollContainer" parent="ArmyUnitsVbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArmyUnitsHBox" type="HBoxContainer" parent="ArmyUnitsVbox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("2_fmkh5")

[node name="SuppliesHBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 390.0
offset_right = 950.0
offset_bottom = 470.0

[node name="FoodSuppliesVBox" type="VBoxContainer" parent="SuppliesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FoodSupplies" type="Label" parent="SuppliesHBox/FoodSuppliesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Food Supplies: "

[node name="FoodSuppliesSlider" type="HSlider" parent="SuppliesHBox/FoodSuppliesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_value = 0.0
rounded = true
ticks_on_borders = true

[node name="WoodSuppliesVBox" type="VBoxContainer" parent="SuppliesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WoodSupplies" type="Label" parent="SuppliesHBox/WoodSuppliesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Wood Supplies: "

[node name="WoodSuppliesSlider" type="HSlider" parent="SuppliesHBox/WoodSuppliesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_value = 0.0

[node name="WeaponsSuppliesVBox" type="VBoxContainer" parent="SuppliesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponSupplies" type="Label" parent="SuppliesHBox/WeaponsSuppliesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Weapons Supplies: "

[node name="WeaponsSuppliesSlider" type="HSlider" parent="SuppliesHBox/WeaponsSuppliesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_value = 0.0

[node name="WealthSuppliesVBox" type="VBoxContainer" parent="SuppliesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WealthSupplies" type="Label" parent="SuppliesHBox/WealthSuppliesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Wealth Supplies: "

[node name="WealthSuppliesSlider" type="HSlider" parent="SuppliesHBox/WealthSuppliesVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_value = 0.0

[node name="ResetConfirmButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 480.0
offset_right = 950.0
offset_bottom = 530.0

[node name="ArmyNameLabel" type="Label" parent="ResetConfirmButtons"]
layout_mode = 2
size_flags_horizontal = 0
text = "Army Name: "

[node name="ArmyName" type="LineEdit" parent="ResetConfirmButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Hukbo"
expand_to_text_length = true

[node name="MinDeployCostLabel" type="Label" parent="ResetConfirmButtons"]
layout_mode = 2
size_flags_horizontal = 0
text = "Minimum
Deploy Cost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinDeployCostInfo" type="Button" parent="ResetConfirmButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "‚ÑπÔ∏è"

[node name="TotalDeployCostLabel" type="Label" parent="ResetConfirmButtons"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
text = "Total Supplies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalDeployCostInfo" type="Button" parent="ResetConfirmButtons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "‚ÑπÔ∏è"

[node name="Deploy" type="Button" parent="ResetConfirmButtons"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 30
text = "Deploy Army[‚úÖ]"

[node name="InfoTipPanel" parent="." instance=ExtResource("4_vjq7h")]
unique_name_in_owner = true
visible = false
layout_mode = 0

[connection signal="pressed" from="BackCloseButtons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="BackCloseButtons/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="TransferUnitsButtons/ArmyToGarrison" to="." method="_on_army_to_garrison_pressed"]
[connection signal="pressed" from="TransferUnitsButtons/GarrisonToArmy" to="." method="_on_garrison_to_army_pressed"]
[connection signal="value_changed" from="SuppliesHBox/FoodSuppliesVBox/FoodSuppliesSlider" to="." method="_on_food_supplies_slider_value_changed"]
[connection signal="value_changed" from="SuppliesHBox/WoodSuppliesVBox/WoodSuppliesSlider" to="." method="_on_wood_supplies_slider_value_changed"]
[connection signal="value_changed" from="SuppliesHBox/WeaponsSuppliesVBox/WeaponsSuppliesSlider" to="." method="_on_weapons_supplies_slider_value_changed"]
[connection signal="value_changed" from="SuppliesHBox/WealthSuppliesVBox/WealthSuppliesSlider" to="." method="_on_wealth_supplies_slider_value_changed"]
[connection signal="pressed" from="ResetConfirmButtons/MinDeployCostInfo" to="." method="_on_min_deploy_cost_info_pressed"]
[connection signal="pressed" from="ResetConfirmButtons/TotalDeployCostInfo" to="." method="_on_total_deploy_cost_info_pressed"]
[connection signal="pressed" from="ResetConfirmButtons/Deploy" to="." method="_on_deploy_pressed"]
